# opsSys

./: .gitignore  Cross.toml  Makefile  README.md
agent/: Cargo.toml
agent/agent-core/: Cargo.toml  config.example.yaml
agent/agent-core/src/: config.rs  local_api.rs  main.rs
agent/protocol-adapters/adapter-trait/: Cargo.toml
agent/protocol-adapters/adapter-trait/src/: lib.rs
agent/protocol-adapters/custom-unix/: Cargo.toml
agent/protocol-adapters/custom-unix/src/: lib.rs
agent/protocol-adapters/mavlink/: Cargo.toml
agent/protocol-adapters/mavlink/src/: lib.rs
agent/quic-transport/: Cargo.toml
agent/quic-transport/src/: lib.rs
agent/ring-buffer/: Cargo.toml
agent/ring-buffer/src/: lib.rs
agent/video-sender/: Cargo.toml
agent/video-sender/src/: main.rs
api/: .dockerignore
api/auth/: go.mod  main.go
api/commands/: go.mod  main.go
api/query/: main.go
api/shared/auth/: go.mod
api/shared/router/: go.mod  nats.go  router.go
api/shared/storage/: go.mod  questdb.go
api/video/: main.go
dashboard/: index.html  package.json
dashboard/src/: App.tsx  env.ts
dashboard/src/api/: client.ts  fleet.ts  members.ts
dashboard/src/components/NavSidebar/: NavSidebar.module.css
dashboard/src/components/TopBar/: TopBar.module.css  TopBar.tsx
dashboard/src/hooks/: useAuth.ts
dashboard/src/pages/ApiKeys/: ApiKeysPage.module.css
dashboard/src/pages/Home/: HomePage.tsx
dashboard/src/pages/Login/: LoginPage.tsx
dashboard/src/pages/Project/: ProjectPage.tsx
dashboard/src/pages/Team/: TeamPage.module.css  TeamPage.tsx
dashboard/src/store/: alertStore.ts  authStore.ts  telemetryStore.ts
dashboard/src/styles/: variables.css
dashboard/src/types/: apikey.ts  member.ts  telemetry.ts
dashboard/src/ws/: WsManager.ts
deploy/ansible/: udp-tuning.yml
deploy/docker/: Dockerfile.relay  docker-compose.dev.yml
deploy/helm/command-api/: values.yaml
deploy/helm/keycloak/: values.yaml
deploy/helm/livekit/: values.yaml
deploy/helm/nats-cluster/: values.yaml
deploy/terraform/cloud-cluster/: main.tf
deploy/terraform/relay-node/: variables.tf
docs/: data-formats.md  deployment.md  hardware-integration.md
infra/ansible/: inventory.ini.example
infra/docker/: Dockerfile.relay  docker-compose.dev.yml  keycloak-realm-import.json  ws-gateway.dev.yaml
infra/docker/keycloak-theme/login/: login.ftl  register.ftl
infra/docker/keycloak-theme/login/resources/css/: login.css
infra/helm/questdb/: values.yaml
infra/helm/telemetry-ingest/: values.yaml
infra/terraform/relay-node/: main.tf
proto/: buf.gen.yaml  buf.yaml
proto/command/: command_payloads.proto
proto/core/: command_service.proto  common.proto  envelope.proto
proto/telemetry/: telemetry.proto
relay/command-forwarder/: Cargo.toml
relay/relay-core/: Cargo.toml
relay/relay-core/src/: main.rs  session.rs
relay/srt-relay/src/: main.rs
relay/ws-gateway/src/: main.rs
scripts/: benchmark_latency.py  seed_fleet.py  simulate_telemetry.py  test_dashboard_integration.py  test_realtime_pipeline.py  test_sdk.py
sdk/: README.md
sdk/go/: README.md  go.mod
sdk/go/systemscale/: client.go  operator.go
sdk/go/systemscale/core/: auth.go
sdk/go/systemscale/message/: receiver.go  sender.go
sdk/go/systemscale/provision/: provisioner.go
sdk/go/systemscale/stream/: emitter.go  subscriber.go
sdk/python/: README.md  pyproject.toml
sdk/python/systemscale/: __init__.py  client.py  operator.py  provisioning.py
sdk/python/systemscale/core/: __init__.py  auth.py  proto.py  transport.py
sdk/python/systemscale/message/: __init__.py  receive.py  send.py
sdk/python/systemscale/provision/: __init__.py  provisioner.py
sdk/python/systemscale/stream/: __init__.py  emit.py  subscribe.py
sdk/python/tests/: test_auth.py  test_proto.py  test_transport.py
server/api/: Dockerfile  go.mod  go.work  go.work.sum
server/api/auth/: Dockerfile  main.go
server/api/commands/: Dockerfile  main.go
server/api/fleet/: Dockerfile  go.mod  main.go
server/api/ingest/: Dockerfile  go.mod  main.go
server/api/query/: Dockerfile  go.mod  main.go
server/api/shared/auth/: auth.go  claims.go  middleware.go  requestid.go  signer.go  validator.go
server/api/shared/router/: nats.go  types.go
server/api/shared/storage/: writer.go
server/api/video/: go.mod
server/dashboard/: package-lock.json  vite.config.ts
server/dashboard/playwright-report/: index.html
server/dashboard/public/: silent-renew.html
server/dashboard/src/: env.ts
server/dashboard/src/api/: apikeys.ts
server/dashboard/src/components/: RoleGuard.tsx
server/dashboard/src/components/Modal/: Modal.module.css  Modal.tsx
server/dashboard/src/components/NavSidebar/: NavSidebar.tsx
server/dashboard/src/pages/ApiKeys/: ApiKeysPage.tsx
server/dashboard/src/pages/AuthCallback/: AuthCallbackPage.tsx
server/dashboard/src/pages/Home/: HomePage.module.css  HomePage.tsx
server/dashboard/src/pages/Login/: LoginPage.module.css
server/dashboard/src/pages/Project/: ProjectPage.module.css
server/dashboard/src/store/: telemetryStore.ts
server/dashboard/src/styles/: global.css
server/dashboard/src/types/: vehicle.ts
server/dashboard/src/ws/: CircularBuffer.ts  WsManager.ts
server/dashboard/test-results/: .last-run.json
server/dashboard/test-results/manual-test-Manual-SystemScale-Dashboard-Test-chromium/: video.webm
server/dashboard/test-results/manual-test-Manual-SystemScale-Dashboard-Test-chromium-retry1/: video.webm
server/dashboard/test-results/manual-test-Manual-SystemScale-Dashboard-Test-chromium-retry2/: error-context.md  video.webm
server/relay/: Cargo.toml
server/relay/command-forwarder/src/: main.rs
server/relay/srt-relay/: Cargo.toml
server/relay/ws-gateway/: Cargo.toml
