[package]
name    = "agent-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemscale-agent"
path = "src/main.rs"

[dependencies]
adapter-trait        = { path = "../protocol-adapters/adapter-trait" }
mavlink-adapter      = { path = "../protocol-adapters/mavlink" }
custom-unix-adapter  = { path = "../protocol-adapters/custom-unix" }
quic-transport       = { path = "../quic-transport" }
ring-buffer          = { path = "../ring-buffer" }

tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_yaml         = { workspace = true }
config             = { workspace = true }
futures            = { workspace = true }
async-stream       = { workspace = true }
bytes              = { workspace = true }
uuid               = { workspace = true }
metrics            = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde_json         = { workspace = true }
axum               = { workspace = true }
hex                = "0.4"
