[package]
name    = "systemscale-video-sender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemscale-video-sender"
path = "src/main.rs"

[dependencies]
anyhow  = { workspace = true }
serde   = { workspace = true }
serde_yaml = { workspace = true }
tokio   = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
