[package]
name    = "command-forwarder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemscale-command-forwarder"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
async-nats = { workspace = true }
bytes      = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
serde      = { workspace = true }
serde_yaml = { workspace = true }
dashmap    = { workspace = true }
metrics    = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prost      = { workspace = true }
futures    = { workspace = true }
