[package]
name    = "relay-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemscale-relay"
path = "src/main.rs"

[dependencies]
tokio       = { workspace = true }
tokio-util  = { workspace = true }
quinn       = { workspace = true }
rustls      = { workspace = true }
async-nats  = { workspace = true }
bytes       = { workspace = true }
prost       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
serde       = { workspace = true }
serde_yaml  = { workspace = true }
futures     = { workspace = true }
metrics     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dashmap     = { workspace = true }
uuid        = { workspace = true }
chrono        = { workspace = true }
x509-parser    = { workspace = true }
rustls-pemfile = { workspace = true }
