[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "systemscale"
version     = "0.1.0"
description = "SystemScale vehicle SDK — log telemetry and receive commands in 3 lines."
readme      = "README.md"
license     = { text = "Apache-2.0" }
requires-python = ">=3.10"
# Zero dependencies — only stdlib (urllib, threading, queue, json).
# The SDK must run on embedded Python without pip access.
dependencies = []

[project.urls]
Homepage      = "https://github.com/systemscale/systemscale"
Documentation = "https://docs.systemscale.io/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["systemscale"]

[tool.hatch.build.targets.sdist]
include = ["systemscale/", "README.md", "pyproject.toml"]
