[workspace]
resolver = "2"
members = [
    "relay-core",
    "srt-relay",
    "ws-gateway",
    "command-forwarder",
]

[profile.release]
opt-level     = 3
lto           = "thin"      # link-time optimisation across crates
codegen-units = 1           # single codegen unit for maximum inlining
panic         = "abort"     # smaller binary, no stack unwinding overhead
strip         = "symbols"   # strip debug symbols from release build

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["codec"] }

# QUIC
quinn   = { version = "0.11", features = ["rustls"] }
rustls  = { version = "0.23", features = ["ring"] }

# NATS JetStream client
async-nats = { version = "0.36", features = ["service"] }

# Serialization
bytes       = "1"
prost       = "0.13"

# WebSocket (for ws-gateway)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite       = { version = "0.24" }

# Error handling
anyhow    = "1"
thiserror = "2"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# TLS certificate parsing
rustls-pemfile = "2"

# Futures / streams
futures      = "0.3"
async-stream = "0.3"

# Metrics
metrics                     = "0.23"
metrics-exporter-prometheus = "0.15"

# UUID
uuid = { version = "1", features = ["v7", "v4"] }

# DashMap for concurrent session tracking (faster than Mutex<HashMap> for reads)
dashmap = "6"

# Base64 — used by ws-gateway to encode payload_b64 in JSON frames
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }


# X.509 certificate parsing — used by relay-core to extract vehicle_id from mTLS cert Subject CN
x509-parser = "0.16"
