[package]
name    = "adapter-trait"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { workspace = true }
futures     = { workspace = true }
bytes       = { workspace = true }
prost       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
async-stream = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
