[package]
name    = "custom-unix-adapter"
version = "0.1.0"
edition = "2021"

[lib]
name = "custom_unix_adapter"
path = "src/lib.rs"

[dependencies]
adapter-trait = { path = "../adapter-trait" }
tokio         = { workspace = true }
bytes         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
futures       = { workspace = true }
async-stream  = { workspace = true }
prost         = { workspace = true }
serde         = { workspace = true }
serde_json    = "1"
