[package]
name    = "srt-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemscale-srt-relay"
path = "src/main.rs"

[dependencies]
tokio         = { workspace = true }
tokio-util    = { workspace = true }
async-nats    = { workspace = true }
bytes         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
serde         = { workspace = true }
serde_yaml    = { workspace = true }
futures       = { workspace = true }
metrics       = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
