[package]
name    = "ws-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemscale-ws-gateway"
path = "src/main.rs"

[dependencies]
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite       = { workspace = true }
async-nats        = { workspace = true }
bytes             = { workspace = true }
futures           = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
serde             = { workspace = true }
serde_yaml        = { workspace = true }
dashmap           = { workspace = true }
metrics           = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde_json  = { workspace = true }
base64      = { workspace = true }
